[project]
name = "b4b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "ipaddress>=1.0.23",
    "javascript>=1!1.2.6",
    "joblib>=1.5.3",
    "minify-html>=0.18.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pycryptodome>=3.23.0",
    "pyhaproxy>=0.3.7",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.3",
]
